<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="view_model"
            type="com.example.mycalculator.presentation.MainActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.MainActivity">

        <LinearLayout
            android:id="@+id/color_picker_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                style="@style/color_picker"
                android:tag="red">

                <ImageView style="@style/check_mark_style" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/color_picker"
                android:tag="purple"
                app:cardBackgroundColor="@color/purple">

                <ImageView style="@style/check_mark_style" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/color_picker"
                android:tag="blue"
                app:cardBackgroundColor="@color/blue">

                <ImageView style="@style/check_mark_style" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/color_picker"
                android:tag="green"
                app:cardBackgroundColor="@color/green">

                <ImageView style="@style/check_mark_style" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/color_picker"
                android:tag="orange"
                app:cardBackgroundColor="@color/orange">

                <ImageView style="@style/check_mark_style" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/color_picker"
                android:tag="black"
                app:cardBackgroundColor="@color/black">

                <ImageView
                    style="@style/check_mark_style"
                    android:visibility="visible" />
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_calculations"
            style="@style/text_calculations"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@{view_model.calculationsData}"
            android:textAlignment="viewEnd"
            android:textSize="25sp"
            android:ellipsize="start"
            app:layout_constraintBottom_toTopOf="@+id/txt_result"
            app:layout_constraintEnd_toEndOf="@+id/txt_result"
            app:layout_constraintStart_toStartOf="@+id/txt_result" />

        <TextView
            android:id="@+id/txt_result"
            style="@style/text_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
            android:text="@{view_model.resultData}"
            android:textAlignment="viewEnd"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/view"
            style="@style/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/row_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <com.google.android.material.button.MaterialButton
                    style="@style/operator_btn"
                    android:tag="clear_btn"
                    android:text="C" />

                <com.google.android.material.button.MaterialButton
                    style="@style/back_space_btn"
                    android:id="@+id/back_btn"
                    app:icon="@drawable/ic_baseline_backspace_24" />

                <com.google.android.material.button.MaterialButton
                    style="@style/operator_btn"
                    android:text="%" />

                <com.google.android.material.button.MaterialButton
                    style="@style/operator_btn"
                    android:text="/" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <com.google.android.material.button.MaterialButton
                    style="@style/digit_btn"
                    android:text="7" />

                <com.google.android.material.button.MaterialButton
                    style="@style/digit_btn"
                    android:text="8" />

                <com.google.android.material.button.MaterialButton
                    style="@style/digit_btn"
                    android:text="9" />

                <com.google.android.material.button.MaterialButton
                    style="@style/operator_btn"
                    android:text="*" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <com.google.android.material.button.MaterialButton
                    style="@style/digit_btn"
                    android:text="4" />

                <com.google.android.material.button.MaterialButton
                    style="@style/digit_btn"
                    android:text="5" />

                <com.google.android.material.button.MaterialButton
                    style="@style/digit_btn"
                    android:text="6" />

                <com.google.android.material.button.MaterialButton
                    style="@style/operator_btn"
                    android:text="+" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <com.google.android.material.button.MaterialButton
                    style="@style/digit_btn"
                    android:text="1" />

                <com.google.android.material.button.MaterialButton
                    style="@style/digit_btn"
                    android:text="2" />

                <com.google.android.material.button.MaterialButton
                    style="@style/digit_btn"
                    android:text="3" />

                <com.google.android.material.button.MaterialButton
                    style="@style/operator_btn"
                    android:text="-" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <com.google.android.material.button.MaterialButton
                    style="@style/operator_btn"
                    android:tag="all_clear_btn"
                    android:text="AC"
                    android:textSize="16sp" />

                <com.google.android.material.button.MaterialButton
                    style="@style/digit_btn"
                    android:text="0" />

                <com.google.android.material.button.MaterialButton
                    style="@style/digit_btn"
                    android:text="." />

                <com.google.android.material.button.MaterialButton
                    style="@style/equal_to_btn"
                    android:text="=" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
